# string-switch

./: CMakeLists.txt  fnv_string.hpp  main.cpp
test/: test.h  test_average_strings.h  test_longer_strings.h  test_short_strings.h  times.h
